# rsip

./: .gitignore  Cargo.toml  README.md
examples/: unauthorized_register.rs
rsip-derives/: Cargo.toml  LICENSE  README.md
rsip-derives/src/: lib.rs  newtype.rs  to_typed_header.rs  typed_header.rs  untyped_header.rs
rsip-wrapper/: Cargo.toml  DIAGRAM.md  IMPLEMENTATION.md  README.md  TESTING.md
rsip-wrapper/include/: rsip_wrapper.h
rsip-wrapper/mod_rsip_example/: mod_rsip.c  test_mod_rsip.c
rsip-wrapper/src/: lib.rs
rsip-wrapper/tests/: integration_test.rs
src/: lib.rs
src/common/: language.rs  method.rs  mod.rs  status_code.rs  transport.rs  version.rs
src/common/uri/: auth.rs  mod.rs  scheme.rs  uri_with_params.rs  uri_with_params_list.rs
src/error/: mod.rs  tokenizer_error.rs
src/headers/: header.rs  mod.rs
src/headers/auth/: algorithm.rs  mod.rs  qop.rs  scheme.rs
src/headers/typed/: accept.rs  alert_info.rs  allow.rs  authentication_info.rs  authorization.rs  call_info.rs  contact.rs  content_disposition.rs  content_type.rs  cseq.rs  error_info.rs  from.rs  in_reply_to.rs  media_type.rs  mod.rs  priority.rs  reply_to.rs  (+8 more)
src/message/: header_macros.rs  headers_ext.rs  mod.rs  request.rs  response.rs  sip_message.rs
src/services/: digest_generator.rs  mod.rs
tests/: lib.rs
tests/common/: method.rs  mod.rs  status_code.rs  transport.rs  version.rs
tests/headers/: media_type.rs  mod.rs
tests/message/: has_headers.rs  message.rs  mod.rs  request.rs  response.rs
tests/services/: auth.rs
tests/support/: has_headers_impl.rs  mod.rs
(+139 files in other folders)
